[gd_scene load_steps=25 format=2]

[ext_resource path="res://Environment/BoundaryArea.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level.gd" type="Script" id=2]
[ext_resource path="res://Levels/SucceesLabel.gd" type="Script" id=3]
[ext_resource path="res://UI/Fonts/DynamicFontData_PHITRADESIGN.tres" type="DynamicFontData" id=4]
[ext_resource path="res://UI/SceneTransitionRect.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Buttons/SceneButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Recipes/RecipeElement.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/ResetButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Environment/Background1.png" type="Texture" id=9]
[ext_resource path="res://UI/Images/Button_fill.png" type="Texture" id=10]
[ext_resource path="res://Atom/Atom.tscn" type="PackedScene" id=11]
[ext_resource path="res://Particles/Scenes/Proton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Particles/Scenes/Neutron.tscn" type="PackedScene" id=13]
[ext_resource path="res://Shell/Shell.gd" type="Script" id=14]
[ext_resource path="res://Shell/Shell.tscn" type="PackedScene" id=15]

[sub_resource type="CircleShape2D" id=9]
radius = 102.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 615.283, 12.418 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 308.215, 12.418 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.59

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 799, 219 )
modulate_color = Color( 0.886275, 0.815686, 0.160784, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 799, 219 )
modulate_color = Color( 0.494118, 0.768627, 0.505882, 1 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 799, 219 )

[sub_resource type="DynamicFont" id=8]
size = 150
outline_color = Color( 0.494118, 0.768627, 0.505882, 1 )
font_data = ExtResource( 4 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Atoms" type="Node2D" parent="."]

[node name="Atom" parent="Atoms" instance=ExtResource( 11 )]
position = Vector2( 479.836, 337.178 )
start_protons = 2
start_neutrons = 1
start_electrons = 6

[node name="CollisionShape2D" parent="Atoms/Atom/AtomArea" index="0"]
shape = SubResource( 9 )

[node name="Shells" parent="Atoms/Atom" index="2"]
shell_count = 2

[node name="Shell" type="Node2D" parent="Atoms/Atom/Shells" index="0" instance=ExtResource( 15 )]
scale = Vector2( 0.125, 0.125 )
z_index = -1
script = ExtResource( 14 )
electron_start_count = 6
electron_max_count = 2

[node name="Shell2" type="Node2D" parent="Atoms/Atom/Shells" index="1" instance=ExtResource( 15 )]
scale = Vector2( 0.16, 0.16 )
z_index = -1
script = ExtResource( 14 )
electron_start_count = 4
electron_max_count = 8

[node name="Tooltip" parent="Atoms/Atom/CanvasLayer" index="0"]
visible = false

[node name="FreeStartingParticles" type="Node2D" parent="."]

[node name="Neutron" parent="FreeStartingParticles" instance=ExtResource( 13 )]
position = Vector2( 744.135, 194.35 )

[node name="StartingNucleusParticles" type="Node2D" parent="."]

[node name="Proton" parent="StartingNucleusParticles" instance=ExtResource( 12 )]
position = Vector2( 460.481, 339.18 )
mode = 1

[node name="Proton2" parent="StartingNucleusParticles" instance=ExtResource( 12 )]
position = Vector2( 460.481, 339.18 )
mode = 1

[node name="Neutron" parent="StartingNucleusParticles" instance=ExtResource( 13 )]
position = Vector2( 491.85, 349.859 )
mode = 1

[node name="Environment" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="Environment"]
modulate = Color( 0.502411, 0.600947, 0.789063, 1 )
position = Vector2( 514.046, 302 )
scale = Vector2( 3.435, 4.055 )
z_index = -100
texture = ExtResource( 9 )

[node name="NearScreenArea" type="Area2D" parent="Environment"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/NearScreenArea"]
position = Vector2( 482.203, 15.0348 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Environment/NearScreenArea"]
position = Vector2( 493.516, 593.399 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Environment/NearScreenArea"]
position = Vector2( 132.227, 294.435 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Environment/NearScreenArea"]
position = Vector2( 1011.83, 302.227 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="ScreenBoundary" type="StaticBody2D" parent="Environment"]
collision_layer = 2
collision_mask = 5
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/ScreenBoundary"]
position = Vector2( 477.96, -10.4882 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Environment/ScreenBoundary"]
position = Vector2( 493.96, 616 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Environment/ScreenBoundary"]
position = Vector2( 106.771, 307.163 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Wall4" type="CollisionShape2D" parent="Environment/ScreenBoundary"]
position = Vector2( 1038.7, 302.227 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="UI" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/LevelUI"]
modulate = Color( 0.956863, 0.584314, 0.584314, 1 )
anchor_bottom = 1.0
margin_right = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeContainer" type="VBoxContainer" parent="CanvasLayer/LevelUI"]
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 30.0
rect_scale = Vector2( 0.11, 0.11 )
custom_constants/separation = 420
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipe" parent="CanvasLayer/LevelUI/RecipeContainer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_right = 990.0
rect_scale = Vector2( 1, 1 )
protons = 2
neutrons = 2
electrons = 2
element = "He"

[node name="SceneTransitionRect" parent="CanvasLayer/LevelUI" instance=ExtResource( 5 )]
visible = false

[node name="SuccessContainer" type="Control" parent="CanvasLayer/LevelUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SuccessLabel" type="Label" parent="CanvasLayer/LevelUI/SuccessContainer"]
margin_top = 199.0
margin_right = 1024.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 4 )
text = "Great job!"
align = 1
script = ExtResource( 3 )

[node name="SceneButton" parent="CanvasLayer/LevelUI/SuccessContainer" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.184
margin_top = 62.7081
margin_right = 632.816
margin_bottom = 275.708
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="Label" parent="CanvasLayer/LevelUI/SuccessContainer/SceneButton" index="3"]
custom_fonts/font = SubResource( 8 )
text = "Next"

[node name="ResetButton" parent="CanvasLayer/LevelUI" instance=ExtResource( 8 )]

[connection signal="body_entered" from="Environment/NearScreenArea" to="Environment/NearScreenArea" method="_on_ScreenBoundary2_body_entered"]

[editable path="Atoms/Atom"]
[editable path="CanvasLayer/LevelUI/SuccessContainer/SceneButton"]
